--- a/webapp/src/app/results/results.component.html
+++ b/webapp/src/app/results/results.component.html
@@ -1,9 +1,10 @@
 <div class="container mt-5">
   <h1>👌 Resultados de búsqueda!</h1>
+  <p class="lead"><b>Buscaste: </b>"{{ keywords }}"</p>
+  <p class="lead"><b>Contador: </b> 50 resultados encontrados</p>
+  <hr />
 
-  <p><b>Buscaste: </b>"ASM"</p>
-
-  <div class="card-columns">
+  <div class="card-columns mb-4">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title">Card title that wraps to a new line</h5>
@@ -80,7 +81,22 @@
     </div>
   </div>
 
-  <a class="btn btn-primary btn-block" [routerLink]="['/search']" role="button">
-    Realizar Nueva Búsqueda 🔍
-  </a>
+  <div class="mb-5">
+    <div class="row">
+      <div class="col-6">
+        <a
+          [routerLink]="['/search']"
+          class="btn btn-outline-primary btn-block"
+          [queryParams]="{ q: mergeKeywords }"
+        >
+          Editar búsqueda 👈
+        </a>
+      </div>
+      <div class="col-6">
+        <a class="btn btn-primary btn-block" [routerLink]="['/search']" role="button">
+          Realizar Nueva Búsqueda 🔍
+        </a>
+      </div>
+    </div>
+  </div>
 </div>
